Add OpenAI ChatGPT integration for city descriptions and enhance location handling. Updated environment sample for API key, added geocoding functionality, and refactored photo module for async EXIF processing. Introduced new prompt template for city descriptions.

--- a/env.sample
+++ b/env.sample
@@ -16,3 +16,6 @@ USE_VITE_DEV=true
 
 # Vite requires VITE_ prefix for frontend environment variables
 VITE_AUDIO_URL=NGROK_LINK_HERE/assets/audio/one_more_time.mp3
+
+# OpenAI API key for ChatGPT integration (optional)
+OPENAI_API_KEY=
